--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
   <app-root></app-root>
+  <!-- Include Bootstrap JS (Bootstrap 5 example) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
